# pdf_modify

./: Cargo.toml  README.md
certs/: gen.sh  mycert.crt  mycert.p12  mykey.key
files/: user.p12
src/: byte_range.rs  config.rs  lib.rs  main.rs  manager.rs  parser.rs  signer.rs  utils.rs
src/manager/: image.rs  mod.rs  sign_info.rs
src/signer/: mod.rs  p12.rs
